--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+  <title>OPaxos - Oblivious Paxos</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -51,6 +51,10 @@
         <a href="https://fadhil.id/papers/opaxos-techreport.pdf" id="download-button" class="btn-small waves-effect waves-light orange">Tech Report</a>
         <a href="https://github.com/opaxos/opaxos" id="download-button" class="btn-small waves-effect waves-light orange">Artifact</a>
         <a href="https://github.com/opaxos/opaxos-tla" id="download-button" class="btn-small waves-effect waves-light orange">Model Checker</a>
+      </div>
+      <div class="row center">
+        Fadhil I. Kurnia and Arun Venkataramani <br>
+        <small>University of Massachusetts Amherst</small>
       </div>
       <br><br>
 
